Changes from initial personal review